# libArrhenius

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.bak  LICENSE.md  README.md  conanfile.txt
applications/: Arrhenius-cli.cpp  CMakeLists.txt
doc/writeups/: .gitignore
doc/writeups/ErrorEstimate/: Error_Estimate.tex
doc/writeups/IntegralEvaluation/: .latexrun.db  Arrhenius_Integral_Quadrature.aux  Arrhenius_Integral_Quadrature.fls  Arrhenius_Integral_Quadrature.tex  arrhenius_rate.gnuplot  references_database.bib
docs/writeups/IntegralEvaluation/: .latexrun.db  Arrhenius_Integral_Quadrature.aux  Arrhenius_Integral_Quadrature.bbl  Arrhenius_Integral_Quadrature.blg  Arrhenius_Integral_Quadrature.tex  arrhenius_rate.gnuplot
scripts/utils/: tag-release.sh
src/: Arrhenius.hpp  Constants.hpp  ThresholdCalculator.hpp
src/Fitting/: ArrheniusFit.hpp  ArrheniusFitBase.hpp  ArrheniusFitInterface.hpp  MinimizeLogAStdDevAndScalingFactors.hpp
src/Fitting/detail/: ConstantTemperatureLinearRegression.hpp  EffectiveExposuresLinearRegression.hpp  MinimizeLogAStdDevAndScalingFactors.hpp  MinimizeLogAVarianceAndScalingFactors.hpp
src/Integration/: ArrheniusIntegral.hpp  ArrheniusIntegralBase.hpp  ModifiedArrheniusIntegral.hpp  ModifiedArrheniusIntegralBase.hpp
src/Integration/detail/: Trapezoid.hpp  Utils.hpp
src/Integration/detail/ArrheniusIntegral/: Trapezoid.hpp
src/Integrators/: ArrheniusIntegral.hpp  ArrheniusIntegralBase.hpp  ArrheniusIntegral_Trapezoid.hpp  Types.hpp
src/Utils/: GenerateOutputFilename.hpp  LinearRegression.hpp  ReadFunction.hpp  Tokenizer.hpp
src/libArrhenius/: Arrhenius.hpp  ThresholdCalculator.hpp
src/libArrhenius/Fitting/: ArrheniusFit.hpp  ArrheniusFitBase.hpp  ArrheniusFitInterface.hpp
src/libArrhenius/Fitting/detail/: ConstantTemperatureLinearRegression.hpp  EffectiveExposuresLinearRegression.hpp  MinimizeLogAVarianceAndScalingFactors.hpp  MinimizeScalingFactors.hpp
src/libArrhenius/Integration/: ArrheniusIntegral.hpp  ArrheniusIntegralBase.hpp  ModifiedArrheniusIntegral.hpp  ModifiedArrheniusIntegralBase.hpp
src/libArrhenius/Integration/detail/ArrheniusIntegral/: ExponentialIntegral.hpp
src/libArrhenius/Integration/detail/ModifiedArrheniusIntegral/: Trapezoid.hpp
src/libArrhenius/Utils/: LinearRegression.hpp
testing/: CMakeLists.txt  README.md  pre-tag-release.sh
testing/CatchTests/: ArrheniusFitting_Tests.cpp  ArrheniusIntegral_Tests.cpp  ArrheniusIntegral_Trapezoid_Tests.cpp  CatchExamples.cpp  Examples.cpp  Misc_Tests.cpp  ModifiedArrheniusIntegral_Trapezoid_Tests.cpp  Performance.cpp  ThresholdCalculator_Tests.cpp  Utils_Tests.cpp
testing/CeleroBenchmarks/: TrapezoidIntegration.cpp
testing/GoogleBenchmarks/: Example.cpp
testing/NoniusBenchmarks/: NoniusBenchmarkExample.cpp
testing/client_project/: CMakeLists.txt  example.cpp
testing/data/: README.md
